...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonAlreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I have an account already"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonFirstTimeUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First time use Lottery System?"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
...
